--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/css/style.css --watch"
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/css/style.css --watch",
+    "build": "npx tailwindcss -o ./dist/css/style.css --minify"
   },
   "keywords": [],
   "author": "",
